# asmith

./: Cargo.toml  README.md  asmith.py  flake.nix  test_asmith.py  todo.md
.github/workflows/: checks.yml  nix.yml
src/: config.rs  main.rs
src/app/: mod.rs
src/bot_commands/: mod.rs
src/logging/: mod.rs
src/matrix_integration/: mod.rs
src/messaging/: mod.rs
src/storage/: mod.rs
src/task_management/: mod.rs
