[package]
name = "asmith"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = { version = "0.11.0", features = ["e2e-encryption", "sqlite"] }
matrix-sdk-crypto = { version = "0.11.0" }
ruma = "0.12.3"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.5"
async-trait = "0.1.80"
rand_distr = "0.4.3"
rand = "0.8.5"
dirs = "6.0"
once_cell = "1.19.0"
futures-util = "0.3.31"
